--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,7 @@ html, body {
 
 .section-services:before {
     content: '';
-    background: url(../img/services-bg.jpg) no-repeat fixed center / cover;
+    background: url(../img/b1.jpg) no-repeat fixed center / cover;
     width: 100%;
     height: 400px; 
     position: absolute;
